--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -1,20 +1,18 @@
-.skillsContainer{
+.skillsContainer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-top: -2%;
-
 }
 
- .skills, h3{
-   padding-bottom: none;
+.skills, h3 {
+  padding-bottom: none;
 }
 
-.Upcoming{
-  margin-top: -5%;
+.Upcoming {
+  margin-bottom: 30px;
 }
 
-.Upcoming p{
+.Upcoming p {
   font-size: 12px;
   margin-top: -5%;
 }
