--- a/src/components/Studies/studies.css
+++ b/src/components/Studies/studies.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-top: -2%;
+  margin-bottom: 30px;
 }
 
 .studiesBox{
