--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,6 +3,13 @@
   height: 100px;
   width: 100%;
   background-color: black;
-  margin: 0;
-  padding: 0;
+}
+
+.header p{
+  display: flex;
+  justify-content: center;
+  padding: 30px;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
 }
