--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ p{
   .casePageBox{
     display: flex;
     flex-direction: column;
-    margin: 0% 10% 0% 10%;
+    padding: 0% 10% 0% 10%;
   }
   h3, h4, h5, h6 {
     font-size: 30px;
@@ -56,7 +56,7 @@ p{
   .casePageBox{
     display: flex;
     flex-direction: column;
-    margin: 0% 5% 0% 5%;
+     padding: 0% 5% 0% 5%;
   }
   h3, h4, h5, h6 {
     font-size: 20px;
